--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,11 @@
 
 /* Your CSS Code here. */
-holder{
+.holder{
 	display:flex;
 	justify-content:space-evenly;
 }
-holder > *{
+.holder > *{
 	display:flex;
 	justify-content:space-evenly;
 	flex-wrap:wrap;
-	
 }
